--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,7 +1,11 @@
 <%- include("partials/header"); -%>
 
 <h1>Compose</h1>
-<input type="text" name="" value="">
-<button type="submit" name="button">Publish</button>
+
+<form class="" action="/compose" method="post">
+  <input type="text" name="publishTitle">
+  <button type="submit" name="button">Publish</button>
+</form>
+
 
 <%- include("partials/footer"); -%>
