--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,4 +3,8 @@
 <h1>Hello</h1>
 <p> <%= startingContent %> </p>
 
+<% for (var i = 0; i < posts.length; i++) { %>
+  <% console.log(posts[i].title); %>
+<% }; %>
+
 <%- include("partials/footer"); -%>
