--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,8 +3,10 @@
 <h1>Hello</h1>
 <p> <%= startingContent %> </p>
 
-<% for (var i = 0; i < posts.length; i++) { %>
-  <% console.log(posts[i].title); %>
-<% }; %>
+<% posts.forEach(function(post) { %>
+  <h1><%= post.title %></h1>
+  <p><%= post.post %></p>
+
+<% }); %>
 
 <%- include("partials/footer"); -%>
