--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,9 @@
 
 <% posts.forEach(function(post) { %>
   <h1><%= post.title %></h1>
-  <p><%= post.post %></p>
+  <% var content = post.post.substring(0,100) %>
+  <% var hrefLink = "/posts/" + post.title; %>
+  <p><%= content %> ... <a href="/posts/<%= post.title %>">Read More</a></p>
 
 <% }); %>
 
