--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
 
 <% posts.forEach(function(post) { %>
   <h1><%= post.title %></h1>
-  <% var content = post.post.substring(0,100) %>
+  <% var content = post.content.substring(0,100) %>
   <% var hrefLink = "/posts/" + post.title; %>
   <p><%= content %> ... <a href="/posts/<%= post.title %>">Read More</a></p>
 
