--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
   <h1><%= post.title %></h1>
   <% var content = post.content.substring(0,100) %>
   <% var hrefLink = "/posts/" + post.title; %>
-  <p><%= content %> ... <a href="/posts/<%= post.title %>">Read More</a></p>
+  <p><%= content %> ... <a href="/posts/<%= post._id %>">Read More</a></p>
 
 <% }); %>
 
